fix(OffCanvas): fix spacings

--- a/packages/components/src/components/Modal/Modal.module.scss
+++ b/packages/components/src/components/Modal/Modal.module.scss
@@ -100,7 +100,7 @@
       }
     }
 
-    header {
+    .header {
       border-bottom-width: var(--separator--height);
       border-bottom-style: var(--border-style--default);
       border-bottom-color: var(--separator--color);
@@ -109,6 +109,10 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+    }
+
+    .content {
+      padding-top: var(--modal--padding);
     }
   }
 }
